feat: feed the world

--- a/src/feed-the-world/globe.pug
+++ b/src/feed-the-world/globe.pug
@@ -1,39 +1,49 @@
 svg.globe(xmlns='http://www.w3.org/2000/svg' viewBox='0 0 215.667 215.667')
-  g(transform='translate(72.304 -37.976)')
-    circle(r='105.833' cy='145.81' cx='35.53' fill='#5df')
-    path(d='M-27.245 60.753a105.833 105.833 0 00-43.059 85.057 105.833 105.833 0 004.324 29.713c.67-2.487 1.11-5.618 3.13-6.005 3.955-.757 5.956 8.34 9.785 7.088 7.779-2.543 2.835-16.668 7.535-23.369 6.538-9.32-3.107.772 26.995-20.923 3.498-3.43 3.962-8.986 5.413-13.667 1.419-4.58 2.383-9.298 3.193-14.023.76-4.434 3.973-9.61 1.558-13.405-2.997-4.71-14.272.049-15.887-5.295-2.252-7.451 16.262-10.867 14.36-18.416-1.478-5.87-14.839-1.983-17.347-6.755zM-10.925 182.332c-2.646.015-5.293.141-7.785.141-7.976 0-16.462.33-23.614 3.862-5.535 2.734-8.793 8.664-13.458 12.724a105.833 105.833 0 0091.312 52.584c.456-.013.913-.03 1.37-.049.102-.283.2-.568.288-.857 1.858-6.137-2.036-12.715-2.036-19.127 0-6.411 12.818-19.273 7.328-26.686-6.256-8.447-24.969 5.558-31.522-.878-4.452-4.371-1.29-13.683-6.054-17.711-4.188-3.54-10.009-4.038-15.83-4.003zM39.335 40.167c-3.33 6.857-6.061 14.2-2.162 19.653 10.282 14.378 40.618-6.99 52.697 5.914 7.046 7.527-4.818 22.684 1.414 30.896 7.846 10.34 28.236 2.594 36.984 12.182 7.927 8.69-2.17 28.35 7.927 34.383 1.548.925 3.293 1.027 5.099.658A105.833 105.833 0 0039.334 40.167zM141.044 152.179c-2.827.032-5.242 1.018-7.627 2.154-6.079 2.896-10.16 9.403-16.512 11.637-9.213 3.24-22.699-5.424-29.24 1.826-9.497 10.525 2.766 28.355 1.71 42.491-.752 10.073-8.078 20.278-5.701 29.762a105.833 105.833 0 0057.37-87.87z' fill='#71c837')
-    path(d='M75.973 76.23c6.431 6.798 6.482 17.193.113 23.218-6.37 6.026-5.709-8.71-9.233-12.51-4.206-4.534-20.426-6.083-14.057-12.108 6.369-6.026 16.746-5.399 23.177 1.4z' fill='#71c837')
-    ellipse(transform='rotate(-12.044)' ry='6.993' rx='10.724' cy='54.96' cx='8.951' fill='#71c837')
+  g.globe__body(transform='translate(72.685 -37.976)')
+    circle.globe__water(r='105.833' cy='145.81' cx='35.53')
+    path.globe__land(d='M-27.245 60.753a105.833 105.833 0 00-43.059 85.057 105.833 105.833 0 004.324 29.713c.67-2.487 1.11-5.618 3.13-6.005 3.955-.757 5.956 8.34 9.785 7.088 7.779-2.543 2.835-16.668 7.535-23.369 6.538-9.32-3.107.772 26.995-20.923 3.498-3.43 3.962-8.986 5.413-13.667 1.419-4.58 2.383-9.298 3.193-14.023.76-4.434 3.973-9.61 1.558-13.405-2.997-4.71-14.272.049-15.887-5.295-2.252-7.451 16.262-10.867 14.36-18.416-1.478-5.87-14.839-1.983-17.347-6.755z')
+    path.globe__land(d='M-10.925 182.332c-2.646.015-5.293.141-7.785.141-7.976 0-16.462.33-23.614 3.862-5.535 2.734-8.793 8.664-13.458 12.724a105.833 105.833 0 0091.312 52.584c.456-.013.913-.03 1.37-.049.102-.283.2-.568.288-.857 1.858-6.137-2.036-12.715-2.036-19.127 0-6.411 12.818-19.273 7.328-26.686-6.256-8.447-24.969 5.558-31.522-.878-4.452-4.371-1.29-13.683-6.054-17.711-4.188-3.54-10.009-4.038-15.83-4.003z')
+    path.globe__land(d='M39.335 40.167c-3.33 6.857-6.061 14.2-2.162 19.653 10.282 14.378 40.618-6.99 52.697 5.914 7.046 7.527-4.818 22.684 1.414 30.896 7.846 10.34 28.236 2.594 36.984 12.182 7.927 8.69-2.17 28.35 7.927 34.383 1.548.925 3.293 1.027 5.099.658A105.833 105.833 0 0039.334 40.167z')
+    path.globe__land(d='M141.044 152.179c-2.827.032-5.242 1.018-7.627 2.154-6.079 2.896-10.16 9.403-16.512 11.637-9.213 3.24-22.699-5.424-29.24 1.826-9.497 10.525 2.766 28.355 1.71 42.491-.752 10.073-8.078 20.278-5.701 29.762a105.833 105.833 0 0057.37-87.87z')
+    path.globe__land(d='M75.973 76.23c6.431 6.798 6.482 17.193.113 23.218-6.37 6.026-5.709-8.71-9.233-12.51-4.206-4.534-20.426-6.083-14.057-12.108 6.369-6.026 16.746-5.399 23.177 1.4z')
+    ellipse.globe__land(transform='rotate(-12.044)' ry='6.993' rx='10.724' cy='54.96' cx='8.951')
     path(d='M35.53 51.088A105.833 105.833 0 00-70.073 152.317 105.833 105.833 0 0035.53 251.643a105.833 105.833 0 00105.602-101.228A105.833 105.833 0 0035.53 51.088z' fill-opacity='.098')
     path(d='M140.461 157.86a125.11 125.11 0 01-104.883 57.12 125.11 125.11 0 01-104.98-57.098 105.833 105.833 0 00104.98 93.761A105.833 105.833 0 00140.46 157.86z' fill-opacity='.098')
+  //- g.globe__hat.globe__hat--left
+  //-   path(d='M22.754-8.7c16.489-14.162 42.744-24.89 62.971-16.933 7.743 3.045 19.806 15.974 13.23 21.166C79.567 10.838 51.084 8.021 26.986 16.7 1.827 30.79-4.233 52.683-4.233 52.683-19.024 47.404 5.798 5.863 22.754-8.7z' fill='red')
+  //-   rect(transform='rotate(-22.708)' ry='8.467' y='22.509' x='6.183' height='22.754' width='96.308' fill='maroon')
+  //-   circle(r='11.113' cy='54.8' cx='-4.762' fill='maroon')
+  g.globe__hat.globe__hat--right
+    g(transform='matrix(-1 0 0 1 211.543 0)')
+      path.globe__hat-body(d='M22.754-8.7c16.489-14.162 42.744-24.89 62.971-16.933 7.743 3.045 19.806 15.974 13.23 21.166C79.567 10.838 51.084 8.021 26.986 16.7 1.827 30.79-4.233 52.683-4.233 52.683-19.024 47.404 5.798 5.863 22.754-8.7z')
+      rect.globe__hat-trim(transform='rotate(-22.708)' ry='8.467' y='22.509' x='6.183' height='22.754' width='96.308')
+      circle.globe__hat-trim(r='11.113' cy='54.8' cx='-4.762')
   g.globe__face
-    g.globe__mouth.globe__mouth--open(transform='translate(72.304 -40.622)')
-      circle(cx='35.53' cy='145.81' r='15.119')
-      path(d='M35.908 152.613a8.693 8.693 0 00-8.283 6.063 15.119 15.119 0 007.905 2.253 15.119 15.119 0 008.522-2.65 8.693 8.693 0 00-8.144-5.666z' fill='red')
-    g.globe__eyes.globe__eyes--open
+    g.globe__cheeks
+      g(transform='translate(72.304 -37.976)')
+        circle(r='9.525' cy='141.989' cx='-31.558')
+        circle(cx='103.38' cy='141.989' r='9.525')
+    g.globe__mouth-container
+      g.globe__mouth.globe__mouth--chewing.globe__stroke(fill='none' stroke-width='2.8' stroke-linecap='round')
+        path.chew-line.chew-line--center(d='M98.58 106.68h18.506')
+        path.chew-line.chew-line--left(d='M91.22 115.058c2.488 0 4.787-1.597 6.031-4.189 1.244-2.592 1.244-5.786 0-8.378-1.244-2.592-3.543-4.189-6.03-4.189' stroke-linejoin='round')
+        path.chew-line.chew-line--right(d='M124.446 115.058c-2.487 0-4.786-1.597-6.03-4.189-1.244-2.592-1.244-5.786 0-8.378 1.244-2.592 3.543-4.189 6.03-4.189' stroke-linejoin='round')
+      g.globe__mouth.globe__mouth--joy
+        path.globe__feature(d='M92.741 103.827a15.119 15.119 0 0015.092 14.363 15.119 15.119 0 0015.082-14.363z')
+        path.globe__tongue(d='M108.212 109.874a8.693 8.693 0 00-8.283 6.063 15.119 15.119 0 007.904 2.253 15.119 15.119 0 008.522-2.649 8.693 8.693 0 00-8.143-5.667z')
+      path.globe__stroke.globe__mouth.globe__mouth--smile(d='M121.269 107.077a13.435 13.435 0 01-6.718 11.636 13.435 13.435 0 01-13.435 0 13.435 13.435 0 01-6.718-11.636' fill='none' stroke-width='3.292' stroke-linecap='round' stroke-linejoin='round')
+      g.globe__mouth.globe__mouth--open(transform='translate(72.304 -40.622)')
+        circle.globe__feature(cx='35.53' cy='145.81' r='15.119')
+        path.globe__tongue(d='M35.908 152.613a8.693 8.693 0 00-8.283 6.063 15.119 15.119 0 007.905 2.253 15.119 15.119 0 008.522-2.65 8.693 8.693 0 00-8.144-5.666z')
+
+    g.globe__eyes
+      path.globe__stroke.globe__eye.globe__eye--joy(d='M58.9 95.143c0-6.672 5.408-12.082 12.08-12.082 6.673 0 12.082 5.41 12.082 12.082' fill='none' stroke='#000' stroke-width='3.051' stroke-linecap='round' stroke-linejoin='round')
+      path.globe__stroke.globe__eye.globe__eye--joy(d='M132.605 95.143c0-6.672 5.409-12.082 12.081-12.082 6.673 0 12.082 5.41 12.082 12.082' fill='none' stroke='#000' stroke-width='3.051' stroke-linecap='round' stroke-linejoin='round')
       g.globe__eye.globe__eye--open(transform='translate(70.98 -37.976)')
-        circle(cy='131.446' r='13.607')
-        circle(r='2.91' cy='126.646' cx='-6.161' fill='#fff')
+        circle.globe__feature(cy='131.446' r='13.607')
+        circle.globe__pupil(r='2.91' cy='126.646' cx='-6.161')
       g.globe__eye.globe__eye--open(transform='translate(144.686 -37.22)')
-        circle(r='13.607' cy='131.446')
-        circle(r='2.91' cx='-6.161' cy='126.646' fill='#fff')
-  //- path(d='M121.269 107.077a13.435 13.435 0 01-6.718 11.636 13.435 13.435 0 01-13.435 0 13.435 13.435 0 01-6.718-11.636' fill='none' stroke='#000' stroke-width='3.292' stroke-linecap='round' stroke-linejoin='round')
-  //- g(transform='translate(70.98 -37.976)')
-  //-   circle(r='13.607' cy='131.446')
-  //-   circle(cx='-6.161' cy='126.646' r='2.91' fill='#fff')
-  //- g(transform='translate(144.686 -37.22)')
-  //-   circle(cy='131.446' r='13.607')
-  //-   circle(cy='126.646' cx='-6.161' r='2.91' fill='#fff')
-  //- g
-  //-   path(d='M92.741 103.827a15.119 15.119 0 0015.092 14.363 15.119 15.119 0 0015.082-14.363z')
-  //-   path(d='M108.212 109.874a8.693 8.693 0 00-8.283 6.063 15.119 15.119 0 007.904 2.253 15.119 15.119 0 008.522-2.649 8.693 8.693 0 00-8.143-5.667z' fill='red')
-  //-   path(d='M58.9 95.143c0-6.672 5.408-12.082 12.08-12.082 6.673 0 12.082 5.41 12.082 12.082M132.605 95.143c0-6.672 5.409-12.082 12.081-12.082 6.673 0 12.082 5.41 12.082 12.082' fill='none' stroke='#000' stroke-width='3.051' stroke-linecap='round' stroke-linejoin='round')
-  //- g(stroke='#000')
-  //-   g(stroke-width='3.274')
-  //-     path(d='M-13.607 131.446c0-7.515 6.092-13.607 13.607-13.607s13.607 6.092 13.607 13.607' fill='none' stroke-linecap='round' stroke-linejoin='round' transform='matrix(.89005 0 0 .70144 70.98 -.319)')
-  //-     path(d='M-13.607 131.446c0-7.515 6.092-13.607 13.607-13.607s13.607 6.092 13.607 13.607' fill='none' stroke-linecap='round' stroke-linejoin='round' transform='matrix(.89005 0 0 .70144 144.686 -.319)')
-  //-   g(fill='none' stroke-width='3.704' stroke-linecap='round')
-  //-     path(d='M98.58 106.68h18.506')
-  //-     path(d='M124.446 115.058c-2.487 0-4.786-1.597-6.03-4.189-1.244-2.592-1.244-5.786 0-8.378 1.244-2.592 3.543-4.189 6.03-4.189M91.22 115.058c2.488 0 4.787-1.597 6.031-4.189 1.244-2.592 1.244-5.786 0-8.378-1.244-2.592-3.543-4.189-6.03-4.189' stroke-linejoin='round')
-  //- g(transform='translate(72.304 -37.976)' opacity='.483')
-  //-   circle(cx='35.53' cy='145.81' r='52.917' fill='#f0f')
+        circle.globe__feature(r='13.607' cy='131.446')
+        circle.globe__pupil(r='2.91' cx='-6.161' cy='126.646')
+  g.globe__drop-zone(transform='translate(72.304 -37.976)')
+    circle(cx='35.53' cy='145.81' r='52.917')
