--- a/src/feed-the-world/index.pug
+++ b/src/feed-the-world/index.pug
@@ -8,4 +8,5 @@ html
     link(rel='stylesheet', href='style.css')
   body
     include dev
+    script(src="./Draggable.min.js")
     script(type="module" src="script.js")
