feat: fix display for feed the world

--- a/src/feed-the-world/style.styl
+++ b/src/feed-the-world/style.styl
@@ -58,6 +58,7 @@ body
     fill hsl(220, 90%, 75%)
 
   &__container
+    display none
     height var(--size)
     width var(--size)
     position absolute
