feat: switch cube shadow to element instead of pseudo

--- a/src/ny-2021-cube/dev.pug
+++ b/src/ny-2021-cube/dev.pug
@@ -4,6 +4,7 @@ label(for="toggle")
 .scene
   //- Plane that all the 3D stuff sits on
   .plane
+    .shadow
     .seat
       .cuboid
         .cuboid__side
