--- a/boilerplate/layout.boilerplate.pug
+++ b/boilerplate/layout.boilerplate.pug
@@ -8,4 +8,4 @@ html
     link(rel='stylesheet', href='style.css')
   body
     block content
-    script(src="script.js")
+    script(type="module" src="script.js")
