--- a/src/happy-birthday-card/dev.pug
+++ b/src/happy-birthday-card/dev.pug
@@ -1,10 +1,44 @@
-input#read(type="checkbox")
+mixin balloon()
+  svg.balloon(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 117.9 124.8')
+    path.balloon__string(d='M59 121v170' stroke-width='2.4')
+    path.balloon__body(d='M59 0A59 59 0 000 59a59 59 0 0050 58 6 6 0 005 8h7a6 6 0 006-8 59 59 0 0050-58A59 59 0 0059 0z')
+    path.balloon__glare(d='M14 42a45 45 0 0127-26' stroke-width='7.9' stroke-linecap='round' stroke-linejoin='round')
+    path.balloon__shadow(d='M59 0a59 59 0 00-5 0 59 59 0 0157 59 59 59 0 01-58 59 59 59 0 01-3 0v1c0 3 2 6 5 6h7a6 6 0 006-8 59 59 0 0050-58A59 59 0 0059 0zm-5 0a59 59 0 00-6 1 59 59 0 016-1zm-6 1a59 59 0 00-6 2 59 59 0 016-2zm-6 2zm0 0a59 59 0 00-5 1 59 59 0 015-1zm-5 1a59 59 0 00-1 1 59 59 0 011-1zm-1 1a59 59 0 00-5 2 59 59 0 015-2zm-5 2zm0 0a59 59 0 00-5 3 59 59 0 015-3zm-5 3zm0 0a59 59 0 00-4 3 59 59 0 014-3zm-4 3a59 59 0 00-1 1 59 59 0 011-1zm-1 1a59 59 0 00-3 3 59 59 0 013-3zm-3 3a59 59 0 00-1 1 59 59 0 011-1zm-1 1a59 59 0 00-3 3 59 59 0 013-3zm-3 3a59 59 0 00-1 1 59 59 0 011-1zm-1 1a59 59 0 00-3 4 59 59 0 013-4zm-3 4a59 59 0 000 1 59 59 0 010-1zm0 1a59 59 0 00-3 4 59 59 0 013-4zm-3 4a59 59 0 000 1 59 59 0 010-1zm0 1a59 59 0 00-2 4 59 59 0 012-4zm-2 4a59 59 0 00-1 1 59 59 0 011-1zm-1 1a59 59 0 00-1 4 59 59 0 011-4zm-1 4a59 59 0 00-1 2 59 59 0 011-2zm-1 2a59 59 0 00-1 3 59 59 0 011-3zm-1 3a59 59 0 000 3 59 59 0 010-3zm0 3a59 59 0 00-1 3 59 59 0 011-3zm-1 3a59 59 0 000 3 59 59 0 010-3zm0 3a59 59 0 000 4 59 59 0 010-4z')
+
+
+input#read(type="checkbox" checked="true")
 label(for="read") Read Card
 .scene
   .card
-    .card__sleeve.sleeve
-      .sleeve__section.sleeve__section--front.card__sleeve-front 1f
-      .sleeve__section.sleeve__section--back.card__sleeve-back 1r
-    .card__content
-      .card__content-front 2f
-      .card__content-back 2r
+    .card__outer.card__part.flip
+      .flip__piece.flip__piece--front.section
+        .section__piece.section__piece--front.front-cover.front-cover__front
+        .section__piece.section__piece--rear.front-cover.hide-back
+          .cover__content.cover__content--front
+            h1.message
+              span Happy
+              span Birthday!
+            +balloon()
+            +balloon()
+            +balloon()
+      .flip__piece.flip__piece--back.section
+        .section__piece.section__piece--front.rear-cover.rear-cover__front
+        .section__piece.section__piece--back.hide-back
+          .cover__content.cover__content--rear
+            h1.message REAR COVER
+    .card__inner.card__part.flip
+      .flip__piece.flip__piece--front.section
+        .section__piece.section__piece--back.inner-top
+          .card__content-container.card__content-container--inner-top
+            .card__content.card__content--top
+              .cake__section.cake__section--bottom.cake__section--bottom-top
+                .cake__section.cake__section--mid-top.cake__section--mid
+                  .cake__section.cake__section--top-top.cake__section--top
+                  .cake__section.cake__section--top-front.cake__section--top
+                .cake__section.cake__section--mid-front.cake__section--mid
+      .flip__piece.flip__piece--back.section
+        .section__piece.section__piece--front.inner-bottom
+          .card__content-container.card__content-container--inner-bottom
+            .card__content.card__content--bottom
+              .cake__section.cake__section--bottom-front.cake__section--bottom
+              h2.card__message Happy Birthday!
